<resources>
    <string name="app_name">kot</string>

    <string name="welcome_to_chatgpt">Hii,How can I Help you?</string>
    <string name="write_here">Write here....</string>
    <string name="todo">TODO</string>
    <string name="desc">I was trained on a massive dataset of text using a machine learning technique called the transformer architecture. This enables me to understand and generate natural language responses to a wide range of questions and topics.</string>
    <string name="main_desc">Hello! I\'m AskMe, a language model Based on ChatGPT developed by Achal Jaiswal.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="signin">Sign In, PLease!</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_91">+ 91</string>
    <string name="full_name">Full Name</string>
    <string name="signup_with_chatgpt">Signup Please!</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="forgot_password_desc">Provide your account\'s email for which you want to reset your password!</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="title_activity_sign_up">signUP</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
