<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:scrollbars="none"
        tools:context=".signUp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:orientation="vertical">

<RelativeLayout
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_marginBottom="25dp"
    android:layout_marginTop="100dp"
    android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView

                android:id="@+id/profileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"

                android:src="@drawable/user"


              />

    <ProgressBar
        android:id="@+id/imageprogreesbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/addImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_add_circle_24"
        android:background="#00000000"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Name/Username"
                android:textColorHint="#656565"
                app:boxStrokeColor="@color/black"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/red" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/email"
                android:textColorHint="#90000000"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:textColorHint="#716F6F"
                app:boxStrokeColor="@color/black"
                app:passwordToggleTint="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <ProgressBar
                    android:id="@+id/signUpProgressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#9C27B0"
                    android:background="@color/black"

                    android:layout_gravity="center"

                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/background"
                    android:textSize="18sp"

                    android:textStyle="bold" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:text="@string/sign_in"
                    android:textColor="@color/light_red"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
